Main logic is done

--- a/src/client/res/css/home.scss
+++ b/src/client/res/css/home.scss
@@ -13,6 +13,7 @@
     font-weight: 700;
     transition: box-shadow 0.3s;
     margin-bottom: 13%;
+    text-align: center;
 }
 
 .form-field:hover {
