--- a/src/client/res/css/index.scss
+++ b/src/client/res/css/index.scss
@@ -148,6 +148,9 @@ body {
     background-size: contain;
     width: 356px;
     height: 400px;
+    border-radius: 30px;
+    border: 3px solid black;
+    box-shadow: 0px 0px 20px black;
 }
 
 .tips {
@@ -156,6 +159,16 @@ body {
     left: 50%;
     -webkit-transform: translate(-50%, 0%);
     transform: translate(-50%, 0%);
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgb(0,0,0);
+    background: radial-gradient(circle, rgba(0,0,0,0.5013714958639706) 70%, rgba(0,0,0,0.7002510476846988) 100%);
 }
 
 .text-border-2px {
