--- a/src/client/res/css/home.scss
+++ b/src/client/res/css/home.scss
@@ -2,7 +2,6 @@
 
 .form-container {
     justify-content: unset;
-    position: relative;
 }
 
 .form-field {
@@ -12,8 +11,9 @@
     font-size: 1.5rem;
     font-weight: 700;
     transition: box-shadow 0.3s;
-    margin-bottom: 13%;
     text-align: center;
+    position: absolute;
+    top: 35%;
 }
 
 .form-field:hover {
@@ -21,7 +21,8 @@
 }
 
 .field-label {
-    margin-bottom: 5%;
+    position: relative;
+    top: -20px;
 }
 
 .error-message {
