Added 1v1 mode and resolved some bugs

--- a/src/client/res/css/home.scss
+++ b/src/client/res/css/home.scss
@@ -38,15 +38,16 @@
 
 .notification {
     position: absolute;
-    justify-content: space-around;
-    top: -300px;
-    width: 200px;
-    height: 100px;
+    top: -50%;
     border-radius: 20px;
-    box-shadow: 0px 5px;
-    text-align: center;
-
+    box-shadow: 0px 5px black;
+    max-width: 300px;
+    padding: 10px;
+    
     div {
+        padding: 10px;
+        margin-bottom: 20px;
+        text-align: center;
         text-transform: uppercase;
     }
 }
