--- a/src/client/res/css/index.scss
+++ b/src/client/res/css/index.scss
@@ -116,6 +116,27 @@ body {
     background-color: $button-hover;
 }
 
+.button-disabled {
+    border-radius: 10px;
+    color: black;
+    background-color: #999999;
+    padding: 5px 10px;
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: 700;
+    pointer-events: all;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: nowrap;
+    cursor: pointer;
+    transition: border-radius 0.3s;
+
+    svg {
+        font-size: 2rem;
+    }
+}
+
 .button-group {
     display: flex;
     flex-wrap: nowrap;
